--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,5 +1,5 @@
-Title: TeachBooks template
-author: TeachBooks Team, built with <a href="https://teachbooks.io">TeachBooks</a> and <a href="https://jupyterbook.org/">Jupyter Book</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""></a> #add your own name here
+Title: Jimmy van der Wereld
+author: Jimmy van der Wereld, built with <a href="https://teachbooks.io">TeachBooks</a> and <a href="https://jupyterbook.org/">Jupyter Book</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""></a> #add your own name here
 
 execute:
   execute_notebooks: "off"
@@ -19,7 +19,7 @@ sphinx:
       exclude_patterns: ["**/_*.yml", "**/*.md", "**/*.ipynb"]
     html_theme_options:
       logo:
-        text: Template
+        text: Biography of Jimmy van der Wereld
         image_light: Photo_JvanderWereld.svg # Put your logo for the light mode here (can be the same as image_dark)
         image_dark: Photo_JvanderWereld.svg # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: "https://github.com/Wereldjimmy/JvanderWereld" #add your own repo URL here
