--- a/book/_config.yml
+++ b/book/_config.yml
@@ -19,7 +19,7 @@ sphinx:
       exclude_patterns: ["**/_*.yml", "**/*.md", "**/*.ipynb"]
     html_theme_options:
       logo:
-        text: Biography of Jimmy van der Wereld
+        text: Jimmy van der Wereld
         image_light: Photo_JvanderWereld.svg # Put your logo for the light mode here (can be the same as image_dark)
         image_dark: Photo_JvanderWereld.svg # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: "https://github.com/Wereldjimmy/JvanderWereld" #add your own repo URL here
