--- a/book/_config.yml
+++ b/book/_config.yml
@@ -37,6 +37,10 @@ sphinx:
       chtml: {
         mtextInheritFont: true # To typeset text within math prettier
       }
+parse:
+  numbered: true
+  renumbering: true  # Ensures numbering resets per chapter
+
   extra_extensions:
     - sphinx.ext.imgconverter
     - jupyterbook_patches
