--- a/book/_config.yml
+++ b/book/_config.yml
@@ -11,6 +11,16 @@ html:
   baseurl :  "https://teachbooks.io/" #Replace this with your own URL
 
 sphinx:
+  extra_extensions:
+  - sphinx_inline_tabs
+  - sphinx.ext.imgconverter
+  - download_link_replacer
+  - jupyterbook_patches
+  - teachbooks_sphinx_grasple
+  - sphinx_image_inverter
+  - sphinx_exercise
+  - sphinx_proof
+  - sphinx_named_colors
   config:
     html_js_files:
     - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
@@ -34,17 +44,13 @@ sphinx:
     html_last_updated_fmt: '%B %-d, %Y'
     html_static_path: ["figures"] # add folders that contain files that need to be included, such as the location of the logo(s)
     mathjax3_config:
-      chtml: {
-        mtextInheritFont: true # To typeset text within math prettier
-      }
-
-  extra_extensions:
-    - sphinx.ext.imgconverter
-    - jupyterbook_patches
-    - download_link_replacer
-    - sphinx.ext.extlinks
-    - sphinx_exercise
-    - teachbooks_sphinx_tippy
+      tex:
+        macros:
+          "newcolor": ['\definecolor{newcolor}{RGB}{111, 29, 119}{\color{newcolor}#1}',1]
+    named_colors_custom_colors: {'onlylight':[165,21,160],'lightanddark':[45,180,117,204,158,110],'hyphen-color':[45,180,117,165,21,160]}
+  local_extensions:
+    apastyle: _ext/
+    bracket_citation_style: _ext/
 
 bibtex_bibfiles: 
   - references.bib
