--- a/book/_config.yml
+++ b/book/_config.yml
@@ -14,10 +14,10 @@ sphinx:
   extra_extensions:
   - download_link_replacer
   - jupyterbook_patches
-  - teachbooks_sphinx_grasple
   - sphinx_exercise
   - sphinx_proof
   - sphinx_named_colors
+  - sphinx.ext.extlinks
   config:
     html_js_files:
     - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
