--- a/book/_config.yml
+++ b/book/_config.yml
@@ -39,13 +39,9 @@ sphinx:
     html_last_updated_fmt: '%B %-d, %Y'
     html_static_path: ["figures"] # add folders that contain files that need to be included, such as the location of the logo(s)
     mathjax3_config:
-      tex:
-        macros:
-          "newcolor": ['\definecolor{newcolor}{RGB}{111, 29, 119}{\color{newcolor}#1}',1]
-    named_colors_custom_colors: {'onlylight':[165,21,160],'lightanddark':[45,180,117,204,158,110],'hyphen-color':[45,180,117,165,21,160]}
-  local_extensions:
-    apastyle: _ext/
-    bracket_citation_style: _ext/
+      chtml: {
+        mtextInheritFont: true # To typeset text within math prettier
+      }
 
 bibtex_bibfiles: 
   - references.bib
