Update requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ sphinx-image-inverter
 download_link_replacer
 sphinx-exercise
 teachbooks-sphinx-tippy
+sphinx-iframes
+sphinx-named-colors
 
-# now list the packages (and the respective url) you wish to download from the GitLab package registry
---extra-index-url https://gitlab.tudelft.nl/api/v4/projects/11239/packages/pypi/simple
-sphinx-thebe ~= 0.9.9
+# Now list the packages you want to download directly from GitHub
+git+https://github.com/TeachBooks/Sphinx-Thebe
