--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -20,6 +20,7 @@ parts:
     - file: MSc/CME/CME.md
       sections:
       - file: MSc/CME/01_Asset_Management_Eneco.md
+      - file: MSc/CME/02_Engineering_Systems_Optimisation.md
     - file: TA work/TA_work.md
       sections:
       - file: TA work/TA_Beton_Staal.md
